# agent-web_qa_bot

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
api/: index.py
src/: __init__.py  __main__.py  config.py
src/agent/: __init__.py  qa_agent.py
src/executor/: __init__.py  qa_executor.py
src/mcp_client/: __init__.py  mcp_runner_client.py
src/prompts/: __init__.py  agent_prompts.py  qa_prompts.py  qa_system_prompt.example.txt  qa_system_prompt.txt
src/skills/: web_analyzer_skill.py
